--- a/style.css
+++ b/style.css
@@ -24,5 +24,33 @@
 }
 
 .display-4 {
+  padding-bottom: 25px;
+}
+
+.display-1:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 45%;
+  padding-top: 8px;
+  border-bottom: 2.5px solid;
+}
+
+.btn-lg {
+  font-size: 20px;
+  border-radius: 10px;
+  width: 10%;
+}
+
+.buttons {
   padding-bottom: 200px;
+}
+
+.btn-link {
+  color: black;
+}
+
+.btn-link:hover {
+  text-decoration-line: none;
+  color: #F0AC74;
 }
