--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 #xlNavbar {
   background-color: #092130;
   border-bottom-style: solid;
+  border-bottom-width: 5px;
   border-bottom-color: black;
 }
 
@@ -17,6 +18,9 @@
   background-image: url(./images/california031.jpg);
   background-size: cover;
   background-position: center bottom;
+  border-bottom-style: solid;
+  border-bottom-width: 5px;
+  border-bottom-color: black;
 }
 
 .display-1 {
@@ -31,26 +35,22 @@
   content: "";
   display: block;
   margin: 0 auto;
-  width: 45%;
+  width: 40%;
   padding-top: 8px;
   border-bottom: 2.5px solid;
-}
-
-.btn-lg {
-  font-size: 20px;
-  border-radius: 10px;
-  width: 10%;
 }
 
 .buttons {
   padding-bottom: 200px;
 }
 
-.btn-link {
-  color: black;
-}
-
-.btn-link:hover {
+.btn-lg:hover {
   text-decoration-line: none;
   color: #F0AC74;
+}
+
+#portfolio-section {
+  border-bottom-style: solid;
+  border-bottom-width: 5px;
+  border-bottom-color: black;
 }
